@@ -1985,88 +1985,117 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|assertNull
+name|BooleanQuery
+name|expected
+init|=
+operator|new
+name|BooleanQuery
+argument_list|()
+decl_stmt|;
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|""
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"  "
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"  "
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"\\ "
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"\\ \\ "
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"\"\""
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"\" \""
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"\" \"|\" \""
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"(\" \"|\" \")"
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"\" \" \" \""
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertNull
+name|assertEquals
 argument_list|(
+name|expected
+argument_list|,
 name|parse
 argument_list|(
 literal|"(\" \" \" \")"
